# docs/swagger.yaml
@@ -166,7 +166,7 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Get all alerts for user
       tags:
-      - alert
+      - alerts
     post:
       parameters:
       - description: Alert Data
@@ -188,7 +188,27 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Create an alert for user
       tags:
-      - alert
+      - alerts
+  /api/v1/alerts/{id}:
+    delete:
+      parameters:
+      - description: alert id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ""
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Delete active alert
+      tags:
+      - alerts
   /api/v1/currencies:
     get:
       produces:
